--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-const NODE_API = import.meta.env.VITE_NODE_API;
+const NODE_API = "https://vercel-backend-sl99.onrender.com"
 const PYTHON_API = import.meta.env.VITE_PYTHON_API;
+VITE_PYTHON_API="https://emotion-python-backend.onrender.com"
