--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-const NODE_API = "https://vercel-backend-sl99.onrender.com"
-const PYTHON_API = import.meta.env.VITE_PYTHON_API;
-VITE_PYTHON_API="https://emotion-python-backend.onrender.com"
+VITE_NODE_API="https://vercel-backend-sl99.onrender.com"
+VITE_PYTHON_API="https://vercel-python-backend.onrender.com"
